<resources>
    <string name="app_name">PedidoMobile</string>
    <string name="numpedido">Nº. Pedido</string>
    <string name="dtpedido">Data Pedido</string>
    <string name="razaosocial">Razão Social</string>
    <string name="cnpj">Cnpj</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="addItens">Adicionar Produto</string>
    <string name="produto">Produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="preco">Preço</string>
    <string name="Total">Total</string>
    <string name="situacao">Situação: %1$s</string>
    <string name="qtdprodutos">Qtd. Produtos: %1$s</string>
    <string name="totalpedido">Total: %1$s</string>
    <string name="qtditens">Qtd. Itens: %1$s</string>
    <string name="voltar">Voltar</string>
    <string name="finalizar">Finalizar</string>
    <string name="salvar">Salvar</string>
    <string name="gravar">Gravar</string>
    <string name="confirmar">Confirmar</string>
    <string name="adicionarproduto">Adicionar Produto</string>
    <string name="aberto">Aberto</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="erro">Erro</string>
    <string name="pedidosalvo">Pedido Salvo com Sucesso!</string>
    <string name="finalizado">Finalizado</string>
    <string name="validaitens">É necessário infomar pelo menos um produto no pedido!</string>
    <string name="descsituacao">Situação</string>
    <string name="descqtditens">Quantidade de Itens</string>
    <string name="desctotal">Total do Pedido</string>
    <string name="descqtdprod">Quantidade de Produtos</string>
    <string name="pedidofinalizado">Pedido Finalizado com sucesso!</string>
    <string name="excluirprod">Deseja excluir o produto?</string>
    <string name="atencao">Atenção!</string>
    <string name="novopedido">Novo Pedido</string>
    <string name="listagempedido">Listagem de Pedidos</string>
</resources>
