<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PedidoActivity"
    android:background="@drawable/background"
    android:layout_margin="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llResumo"
        android:layout_marginBottom="1dp"
        android:orientation="vertical">

        <!--Cabeçalho fixo (llCabecalho)!-->
        <LinearLayout
            android:id="@+id/llCabecalho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/numpedido">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/etNumPedido"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btData"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/razaosocial">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRazaoSocial"/>

        </com.google.android.material.textfield.TextInputLayout>


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Cabeçalho !-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/cnpj">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/etCnpj"
                                android:inputType="number"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/telefone">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etTelefone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="phone" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etEmail"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btAddItens"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="abrirAddItens"
                        android:drawableLeft="@drawable/ic_add"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:text="@string/adicionarproduto"
                        android:padding="10dp"
                        android:background="@color/colorPrimary"/>

                </LinearLayout>

                <!--adicionar itens!-->
                <LinearLayout
                    android:id="@+id/llAddItens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="2dp"
                            android:layout_weight="1"
                            android:background="@android:color/darker_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/addItens" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="2dp"
                            android:layout_weight="1"
                            android:background="@android:color/darker_gray" />

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/produto">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etProduto"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/quantidade">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/etQtdItem"
                                android:inputType="number"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/preco">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/etPrecoItem"
                                android:inputType="numberDecimal"/>

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/Total">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/etTotalItem"
                                android:focusable="false"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btConfirmarItem"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="confirmarItem"
                            android:drawableLeft="@drawable/ic_salvar"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            android:text="@string/confirmar"
                            android:padding="10dp"
                            android:background="@color/green"/>

                    </LinearLayout>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvItens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </ScrollView>




    </LinearLayout>

    <!--Resumo!-->
    <LinearLayout
        android:id="@+id/llResumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/tvSituacaoPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvQtdProdutos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvQtdItens"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvTotalPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btVoltar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_back"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/voltar"
                android:padding="10dp"
                android:onClick="voltar"
                android:background="@android:color/holo_red_dark"/>

            <Button
                android:id="@+id/btGravar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="gravarPedido"
                android:drawableLeft="@drawable/ic_salvar"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/gravar"
                android:padding="10dp"
                android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/btFinalizar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_finalizar"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/finalizar"
                android:padding="10dp"
                android:onClick="finalizaPedido"
                android:background="@color/green"/>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>